--- a/week-3/todoApp/index.html
+++ b/week-3/todoApp/index.html
@@ -6,6 +6,51 @@
     <title>Todo App</title>
   </head>
   <script>
+    function deleteTodo(id) {
+      fetch(`http://localhost:3000/todos/${id}`, {
+        method: "DELETE",
+      }).then(() => {
+        console.log("delete done!!");
+      });
+    }
+
+    function todosCallback(data) {
+      let parentElement = document.querySelector("#mainarea");
+      // parentElement.innerHTML = JSON.stringify(data);
+      for (let i = 0; i < data.length; i++) {
+        let childElement = document.createElement("div");
+        let grandChildElement1 = document.createElement("span");
+        grandChildElement1.innerHTML = data[i].title;
+        let grandChildElement2 = document.createElement("span");
+        grandChildElement2.innerHTML = data[i].description;
+
+        let grandChildElement3 = document.createElement("button");
+        grandChildElement3.innerHTML = "DELETE";
+        grandChildElement3.setAttribute(
+          "onclick",
+          "deleteTodo(" + data[i].id + ")"
+        );
+
+        childElement.appendChild(grandChildElement1);
+        childElement.appendChild(grandChildElement2);
+        childElement.appendChild(grandChildElement3);
+
+        parentElement.appendChild(childElement);
+      }
+    }
+
+    function getDataCallback(resp) {
+      resp.json().then(todosCallback);
+    }
+
+    function getData() {
+      fetch("http://localhost:3000/todos", {
+        method: "GET",
+      }).then(getDataCallback);
+    }
+
+    getData();
+
     function parsedResponse(data) {
       console.log(data);
     }
@@ -15,11 +60,14 @@
     }
 
     function onPress() {
+      let title = document.querySelector("#title").value;
+      let desc = document.querySelector("#description").value;
+
       fetch("http://localhost:3000/todos", {
         method: "POST",
         body: JSON.stringify({
-          title: "gym",
-          description: "go to gym at 6",
+          title: title,
+          description: desc,
         }),
         headers: {
           "Content-Type": "application/json",
@@ -35,5 +83,6 @@
     <input type="text" name="description" id="description" />
     <br />
     <button onclick="onPress()">Send</button>
+    <div id="mainarea"></div>
   </body>
 </html>
